fix: fix width overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -72,5 +72,7 @@
   }
   body {
     @apply bg-background text-foreground;
+    overscroll-behavior: none;
+    overflow-x: hidden;
   }
 }
